# project-pro-filer

./: pyproject.toml  requirements.txt
pro_filer/: __main__.py  cli.py  cli_helpers.py  entities.py
pro_filer/actions/: __init__.py  alpha_actions.py  beta_actions.py  main_actions.py
tests/actions/: test_find_duplicate_files.py  test_show_details.py  test_show_disk_usage.py  test_show_preview.py
